clusters/homelab/infrastructure/monitoring/grafana-virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: monitoring-gateway
  namespace: monitoring
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "grafana.cihuylabs.my.id"
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: grafana
  namespace: monitoring
spec:
  hosts:
    - "grafana.cihuylabs.my.id"
  gateways:
    - monitoring-gateway
  http:
    - route:
        - destination:
            host: grafana.monitoring.svc.cluster.local
            port:
              number: 3000
